--- a/amazonaa/frontend/public/index.html
+++ b/amazonaa/frontend/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- font awesome  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <title>React App</title>
   </head>
   <body>
@@ -39,5 +44,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      src="//code.tidio.co/k8kfyqk3eqc2cfjjwiewqkvzen483gc3.js"
+      async
+    ></script>
   </body>
 </html>
